minor changes in pom, etc.